# Battleships

./: CMakeLists.txt  README.md
doc/: Task_descripton.txt
include/: ChoiceStrategy.h  Computer.h  ConsoleDisplaying.h  ConsoleInput.h  Coordinates.h  GameLogic.h  GameLogicUserInterface.h  GreedyStrategy.h  Grid.h  GridField.h  Human.h  HumanUserInterface.h  MultiFunnelShip.h  OneFunnelShip.h  Player.h  RandomStrategy.h  Ship.h
src/: ChoiceStrategy.cpp  Computer.cpp  ConsoleDisplaying.cpp  ConsoleInput.cpp  Coordinates.cpp  GameLogic.cpp  GameLogicUserInterface.cpp  GreedyStrategy.cpp  Grid.cpp  GridField.cpp  Human.cpp  HumanUserInterface.cpp  MultiFunnelShip.cpp  OneFunnelShip.cpp  Player.cpp  RandomStrategy.cpp  Ship.cpp  main.cpp
test/: BattleshipsTest.cpp
